[gd_scene load_steps=5 format=3 uid="uid://w27lkgg817u1"]

[ext_resource type="Script" uid="uid://cv164uys4ryhl" path="res://scripts/board_control.gd" id="1_6turf"]
[ext_resource type="Texture2D" uid="uid://cxg381u41wjmd" path="res://assets/sprites/board_button_border.png" id="2_wqog4"]
[ext_resource type="Texture2D" uid="uid://bun0iu0durre6" path="res://assets/sprites/board_add.png" id="3_6turf"]
[ext_resource type="Texture2D" uid="uid://crvxcqe16grom" path="res://assets/sprites/board_substract.png" id="4_30xwt"]

[node name="BoardControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6turf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_right = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="FakeBoard" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="TextureRect" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(0.714844, 1, 0.739349, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_wqog4")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Add" type="TextureButton" parent="HBoxContainer/VBoxContainer/TextureRect"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture_normal = ExtResource("3_6turf")
stretch_mode = 3

[node name="TextureRect2" type="NinePatchRect" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(1, 0.558594, 0.672394, 1)
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_wqog4")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Substract" type="TextureButton" parent="HBoxContainer/VBoxContainer/TextureRect2"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture_normal = ExtResource("4_30xwt")
stretch_mode = 3

[connection signal="button_up" from="HBoxContainer/VBoxContainer/TextureRect/Add" to="." method="_on_add_button_up"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/TextureRect2/Substract" to="." method="_on_substract_button_up"]
